--- a/src/app/scholarapplication/scholarapplication.component.html
+++ b/src/app/scholarapplication/scholarapplication.component.html
@@ -13,10 +13,12 @@
             <label for="inputReligion" class="form-label">RELIGION</label>
             <select id="inputReligion" name="religion" class="form-select" id="religion" ngModel>
               <option selected>select your religion</option>
-              <option>Hindu</option>
-              <option>Muslim</option>
-              <option>Christian</option>
-              <option>Sikh</option>
+              <option>BC-A</option>
+              <option>BC-B</option>
+              <option>BC-C</option>
+              <option>BC-D</option>
+              <option>OC</option>
+              <option>SC/ST</option>
               <option>Other</option>
             </select>
         </div>
@@ -41,14 +43,7 @@
         
         <div class="col-md-4">
             <label for="inputInstitutionName" class="form-label">INSTITUTION NAME</label>
-            <select id="inputInstitutionName" name="institution" class="form-select" id="institution" ngModel>
-              <option selected>select your institution</option>
-              <option>Institute 1</option>
-              <option>Institute 2</option>
-              <option>Institute 3</option>
-              <option>Institute 4</option>
-              <option>Institute 5</option>
-            </select>
+            <input type="text" name="institution" id="institution" class="form-control" ngModel>
         </div>
         <div class="col-4">
             <label for="inputPresentClass" class="form-label">Present Class</label>
@@ -177,10 +172,11 @@
           <select id="inputState" name="state" class="form-select" id="state" ngModel>
             <option selected>select your state</option>
             <option value="1" name="state">Telangana</option>
-            <option value="2" name="state">Maharashtra</option>
-            <option name="state">Kerala</option>
-            <option name="state">MadhyaPradesh</option>
-            <option name="state">Punjab</option>
+            <option value="2" name="state">Andhra Pradesh</option>
+            <option value="3" name="state">Maharashtra</option>
+            <option value="4" name="state">Kerala</option>
+            <option value="5" name="state">MadhyaPradesh</option>
+            <option value="6" name="state">Punjab</option>
           </select>
         </div>
         <div class="col-6">
